@@ -37,20 +37,56 @@
 
   <build>
   <plugins>
-
-
-  <plugin>
+<plugin>
   <groupId>org.codehaus.mojo</groupId>
   <artifactId>exec-maven-plugin</artifactId>
   <version>3.1.0</version>
+
   <configuration>
     <mainClass>com.hhu.App</mainClass>
+
+    <!-- JVM-Argumente als Liste (sauber) -->
+    <jvmArgs>
+      <jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
+      <jvmArg>--add-opens=java.base/java.util=ALL-UNNAMED</jvmArg>
+    </jvmArgs>
+
+    <!-- fork ist nötig, damit jvmArgs angewandt werden -->
+    <fork>true</fork>
   </configuration>
+
+  <executions>
+    <execution>
+      <id>run-app</id>
+      <goals>
+        <goal>java</goal>
+      </goals>
+    </execution>
+  </executions>
 </plugin>
-    <plugin>
-      <artifactId>maven-compiler-plugin</artifactId>
-      <version>3.11.0</version>
-    </plugin>
+
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-shade-plugin</artifactId>
+  <version>3.5.0</version>
+  <executions>
+    <execution>
+      <phase>package</phase>
+      <goals>
+        <goal>shade</goal>
+      </goals>
+      <configuration>
+        <transformers>
+          <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+            <mainClass>com.hhu.App</mainClass>
+          </transformer>
+        </transformers>
+      </configuration>
+    </execution>
+  </executions>
+</plugin>
+
+
   </plugins>
 </build>
 </project>
